# demo-python-big-o-notation

./: README.md  main.py  pyproject.toml
bigo/: bigo.py  example.py
